--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -1,13 +1,23 @@
+@Article{Crouse1987,
+author = {Crouse, D. T. and Crowder, L. B. and Caswell, H. }, 
+title = {{A Stage-Based Population Model for Loggerhead Sea Turtles and Implications for Conservation}}, 
+journal = {Ecology}, 
+volume = {68}, 
+pages = {1412-1423}, 
+year = {1987}, 
+abstract = {}, 
+location = {}, 
+keywords = {}}
+
+
 @Article{Crowder1994,
 author = {Crowder, L. B. and Crouse, D. T. and Heppell, S. S. and Martin, T. H. }, 
 title = {{Predicting the impact of turtle excluder devices on loggerhead sea turtle populations}}, 
 journal = {Ecol Appl}, 
 volume = {4}, 
-issue = {}, 
 pages = {437-445}, 
 year = {1994}, 
 abstract = {}, 
-doi = {10.2307/1941948}, 
 location = {}, 
 keywords = {}}
 
@@ -26,43 +36,62 @@ abstract = {},
 keywords = {}}
 
 @Article{Salguero-Gomez2015,
-author = {Salguero-G{\'o}mez, R. and Jones, O. R. and Archer, C. R. and Buckley, Y. M. and Che-Castaldo, J. and Caswell, H. and Hodgson, D. and Scheuerlein, A. and Conde, D. A. and Brinks, E. and de Buhr, H. and Farack, C. and Gottschalk, F. and Hartmann, A. and Henning, A. and Hoppe, G. and R{\"o}mer, G. and Runge, J. and Ruoff, T. and Wille, J. and Zeh, S. and Davison, R. and Vieregg, D. and Baudisch, A. and Altwegg, R. and Colchero, F. and Dong, M. and de Kroon, H. and Lebreton, J.-D. and Metcalf, C. J. E. and Neel, M. M. and Parker, I. M. and Takada, T. and Valverde, T. and V{\'e}lez-Espino, L. A. and Wardle, G. M. and Franco, M. and Vaupel, J. W. }, 
-title = {{The {COMPADRE} Plant Matrix Database: an open online repository for plant demography}}, 
-journal = {J. Ecol.}, 
+author = {Salguero-Gómez, R. and Jones, O. R. and Archer, C. R. and Buckley, Y. M. and Che-Castaldo, J. and Caswell, H. and Hodgson, D. and Scheuerlein, A. and Conde, D. A. and Brinks, E. and de Buhr, H. and Farack, C. and Gottschalk, F. and Hartmann, A. and Henning, A. and Hoppe, G. and Römer, G. and Runge, J. and Ruoff, T. and Wille, J. and Zeh, S. and Davison, R. and Vieregg, D. and Baudisch, A. and Altwegg, R. and Colchero, F. and Dong, M. and de Kroon, H. and Lebreton, J.-D. and Metcalf, C. J. E. and Neel, M. M. and Parker, I. M. and Takada, T. and Valverde, T. and Vélez-Espino, L. A. and Wardle, G. M. and Franco, M. and Vaupel, J. W. }, 
+title = {{The COMPADRE Plant Matrix Database: an open online repository for plant demography}}, 
+journal = {J Ecol}, 
 volume = {103}, 
-issue = {}, 
 pages = {202-218}, 
 year = {2015}, 
 abstract = {}, 
-doi = {10.1111/1365-2745.12334}, 
 location = {}, 
 keywords = {}}
 
 
 @Article{Salguero-Gomez2016,
-author = {Salguero-G{\'o}mez, R. and Jones, O. R. and Archer, C. R. and Bein, C. and de Buhr, H. and Farack, C. and Gottschalk, F. and Hartmann, A. and Henning, A. and Hoppe, G. and R{\"o}mer, G. and Ruoff, T. and Sommer, V. and Wille, J. and Voigt, J. and Zeh, S. and Vieregg, D. and Buckley, Y. M. and Che-Castaldo, J. and Hodgson, D. and Scheuerlein, A. and Caswell, H. and Vaupel, J. W. }, 
-title = {{{COMADRE}: a global data base of animal demography.}}, 
-journal = {J. Anim. Ecol.}, 
+author = {Salguero-Gómez, R. and Jones, O. R. and Archer, C. R. and Bein, C. and de Buhr, H. and Farack, C. and Gottschalk, F. and Hartmann, A. and Henning, A. and Hoppe, G. and Römer, G. and Ruoff, T. and Sommer, V. and Wille, J. and Voigt, J. and Zeh, S. and Vieregg, D. and Buckley, Y. M. and Che-Castaldo, J. and Hodgson, D. and Scheuerlein, A. and Caswell, H. and Vaupel, J. W. }, 
+title = {{COMADRE: a global data base of animal demography.}}, 
+journal = {J Anim Ecol}, 
 volume = {85}, 
-issue = {2}, 
 pages = {371-384}, 
 year = {2016}, 
 abstract = {The open-data scientific philosophy is being widely adopted and proving to promote considerable progress in ecology and evolution. Open-data global data bases now exist on animal migration, species distribution, conservation status, etc. However, a gap exists for data on population dynamics spanning the rich diversity of the animal kingdom world-wide. This information is fundamental to our understanding of the conditions that have shaped variation in animal life histories and their relationships with the environment, as well as the determinants of invasion and extinction. Matrix population models (MPMs) are among the most widely used demographic tools by animal ecologists. MPMs project population dynamics based on the reproduction, survival and development of individuals in a population over their life cycle. The outputs from MPMs have direct biological interpretations, facilitating comparisons among animal species as different as Caenorhabditis elegans, Loxodonta africana and Homo sapiens. Thousands of animal demographic records exist in the form of MPMs, but they are dispersed throughout the literature, rendering comparative analyses difficult. Here, we introduce the COMADRE Animal Matrix Database, an open-data online repository, which in its version 1.0.0 contains data on 345 species world-wide, from 402 studies with a total of 1625 population projection matrices. COMADRE also contains ancillary information (e.g. ecoregion, taxonomy, biogeography, etc.) that facilitates interpretation of the numerous demographic metrics that can be derived from its MPMs. We provide R code to some of these examples. SYNTHESIS: We introduce the COMADRE Animal Matrix Database, a resource for animal demography. Its open-data nature, together with its ancillary information, will facilitate comparative analysis, as will the growing availability of databases focusing on other aspects of the rich animal diversity, and tools to query and combine them. Through future frequent updates of COMADRE, and its integration with other online resources, we encourage animal ecologists to tackle global ecological and evolutionary questions with unprecedented sample size.}, 
-doi = {10.1111/1365-2656.12482}, 
 location = {}, 
 keywords = {}}
 
+
+@Article{Salguero-Gomez2016a,
+author = {Salguero-Gómez, R. and Jones, O. R. and Jongejans, E. and Blomberg, S. P. and Hodgson, D. J. and Mbeau-Ache, C. and Zuidema, P. A. and de Kroon, H. and Buckley, Y. M. }, 
+title = {{Fast-slow continuum and reproductive strategies structure plant life-history variation worldwide.}}, 
+journal = {Proc Natl Acad Sci U S A}, 
+volume = {113}, 
+pages = {230-235}, 
+year = {2016}, 
+abstract = {The identification of patterns in life-history strategies across the tree of life is essential to our prediction of population persistence, extinction, and diversification. Plants exhibit a wide range of patterns of longevity, growth, and reproduction, but the general determinants of this enormous variation in life history are poorly understood. We use demographic data from 418 plant species in the wild, from annual herbs to supercentennial trees, to examine how growth form, habitat, and phylogenetic relationships structure plant life histories and to develop a framework to predict population performance. We show that 55\% of the variation in plant life-history strategies is adequately characterized using two independent axes: the fast-slow continuum, including fast-growing, short-lived plant species at one end and slow-growing, long-lived species at the other, and a reproductive strategy axis, with highly reproductive, iteroparous species at one extreme and poorly reproductive, semelparous plants with frequent shrinkage at the other. Our findings remain consistent across major habitats and are minimally affected by plant growth form and phylogenetic ancestry, suggesting that the relative independence of the fast-slow and reproduction strategy axes is general in the plant kingdom. Our findings have similarities with how life-history strategies are structured in mammals, birds, and reptiles. The position of plant species populations in the 2D space produced by both axes predicts their rate of recovery from disturbances and population growth rate. This life-history framework may complement trait-based frameworks on leaf and wood economics; together these frameworks may allow prediction of responses of plants to anthropogenic disturbances and changing environments.}, 
+location = {}, 
+keywords = {}}
+
+
+@Book{Mills2007,
+author = {Mills, L. S. }, 
+title = {Conservation of Wildlife Populations: Demography, Genetics, and Management}, 
+volume = {}, 
+pages = {342}, 
+editor = {}, 
+edition = {}, 
+publisher = {Blackwell}, 
+address = {Malden, MA}, 
+year = {2007}, 
+abstract = {}, 
+keywords = {}}
 
 @Article{Fujiwara2017,
 author = {Fujiwara, M. and Diaz-Lopez, J. }, 
 title = {{Constructing stage-structured matrix population models from life tables: comparison of methods.}}, 
 journal = {PeerJ}, 
 volume = {5}, 
-issue = {}, 
 pages = {e3971}, 
 year = {2017}, 
 abstract = {A matrix population model is a convenient tool for summarizing}, 
-doi = {10.7717/peerj.3971}, 
 location = {Department of Wildlife and Fisheries Sciences, Texas A\&M University, College Station, TX, United States of America.}, 
 keywords = {}}
 
@@ -70,13 +99,11 @@ keywords = {}}
 @Article{Dunham2014,
 author = {Dunham, K. and Dinkelacker, S. and Miller, J. }, 
 title = {{A stage-based population model for American alligators in northern latitudes}}, 
-journal = {Jour. Wild. Mgmt.}, 
+journal = {Jour Wild Mgmt}, 
 volume = {78}, 
-issue = {3}, 
 pages = {440-447}, 
 year = {2014}, 
-abstract = {Very little is known about the population dynamics of American alligators in northern latitudes. To better define the characteristics of the northern population, we combined published life-history and vital rate data for studies conducted in North Carolina and South Carolina; for comparison, we gleaned the same information from the literature for the southern (Florida and Louisiana) population. We constructed a 5-stage Lefkovitch matrix model for each population. The models showed that the southern population was stable and slightly increasing (? = 1.02), whereas the northern population was in decline (? = 0.870). We integrated potential impacts of climate change into the northern population model to determine how the population might respond to increased temperature and decreased precipitation. An increase in temperature would benefit the northern population; however, a decrease in precipitation or the combined effects of temperature increase and precipitation decrease would negatively affect the viability of the northern population. Two priorities result from modeling these scenarios: 1) a long-term monitoring program is needed to acquire the life-history and vital rate data on the northern population, and 2) current alligator habitat must be conserved or improved to insulate the species from potential drought associated with climate change.}, 
-doi = {10.1002/jwmg.688}, 
+abstract = {Very little is known about the population dynamics of American alligators in northern latitudes. To better define the characteristics of the northern population, we combined published life‐history and vital rate data for studies conducted in North Carolina and South Carolina; for comparison, we gleaned the same information from the literature for the southern (Florida and Louisiana) population. We constructed a 5‐stage Lefkovitch matrix model for each population. The models showed that the southern population was stable and slightly increasing (λ = 1.02), whereas the northern population was in decline (λ = 0.870). We integrated potential impacts of climate change into the northern population model to determine how the population might respond to increased temperature and decreased precipitation. An increase in temperature would benefit the northern population; however, a decrease in precipitation or the combined effects of temperature increase and precipitation decrease would negatively affect the viability of the northern population. Two priorities result from modeling these scenarios: 1) a long‐term monitoring program is needed to acquire the life‐history and vital rate data on the northern population, and 2) current alligator habitat must be conserved or improved to insulate the species from potential drought associated with climate change.}, 
 location = {}, 
 keywords = {}}
 
@@ -86,11 +113,9 @@ author = {Morris, J. A. and Shertzer, K. W. and Rice, J. A. },
 title = {{A stage-based matrix population model of invasive lionfish with implications for control}}, 
 journal = {Biol Invasions}, 
 volume = {13}, 
-issue = {1}, 
 pages = {7-12}, 
 year = {2011}, 
 abstract = {}, 
-doi = {10.1007/s10530-010-9786-8}, 
 location = {}, 
 keywords = {}}
 
@@ -108,71 +133,14 @@ year = {1989},
 abstract = {}, 
 keywords = {}}
 
-@Article{Bienvenu2015,
-author = {Bienvenu, F. and Legendre, S. }, 
-title = {{A new approach to the generation time in matrix population models}}, 
-journal = {Am Nat}, 
-volume = {185}, 
-issue = {6}, 
-pages = {834-843}, 
-year = {2015}, 
-abstract = {The generation time is commonly defined as the mean age of mothers at birth. In matrix population models, a general formula is available to compute this quantity. However, it is complex and hard to interpret. Here, we present a new approach where the generation time is envisioned as a return time in an appropriate Markov chain. This yields surprisingly simple results, such as the fact that the generation time is the inverse of the sum of the elasticities of the growth rate to changes in the fertilities. This result sheds new light on the interpretation of elasticities (which as we show correspond to the frequency of events in the ancestral lineage of the population), and we use it to generalize a result known as Lebreton's formula. Finally, we also show that the generation time can be seen as a random variable, and we give a general expression for its distribution.}, 
-doi = {10.1086/681104}, 
-location = {Unit{\'e} Mixte de Recherche 8197, Institut de Biologie de l'{\'E}cole Normale Sup{\'e}rieure (Centre National de la Recherche Scientifique, {\'E}cole Normale Sup{\'e}rieure), 46 Rue d'Ulm, 75230 Paris Cedex 05, France.}, 
-keywords = {}}
-
-
-@Article{Crouse1987,
-author = {Crouse, D. T. and Crowder, L. B. and Caswell, H. }, 
-title = {{A stage-based population model for loggerhead sea turtles and implications for conservation}}, 
-journal = {Ecology}, 
-volume = {68}, 
-issue = {}, 
-pages = {1412-1423}, 
-year = {1987}, 
-abstract = {}, 
-doi = {10.2307/1939225}, 
-location = {}, 
-keywords = {}}
-
-
-@Book{Caswell2001,
-author = {Caswell, H. }, 
-title = {Matrix population models: Construction, analysis, and interpretation}, 
-volume = {}, 
-pages = {}, 
-editor = {}, 
-edition = {2nd}, 
-publisher = {Sinauer Associates}, 
-address = {Sunderland, MA}, 
-year = {2001}, 
-abstract = {}, 
-keywords = {}}
-
-@Article{Salguero-Gomez2016a,
-author = {Salguero-G{\'o}mez, R. and Jones, O. R. and Jongejans, E. and Blomberg, S. P. and Hodgson, D. J. and Mbeau-Ache, C. and Zuidema, P. A. and de Kroon, H. and Buckley, Y. M. }, 
-title = {{Fast-slow continuum and reproductive strategies structure plant life-history variation worldwide.}}, 
-journal = {Proc. Natl. Acad. Sci. U. S. A.}, 
-volume = {113}, 
-issue = {1}, 
-pages = {230-235}, 
-year = {2016}, 
-abstract = {The identification of patterns in life-history strategies across the tree of life is essential to our prediction of population persistence, extinction, and diversification. Plants exhibit a wide range of patterns of longevity, growth, and reproduction, but the general determinants of this enormous variation in life history are poorly understood. We use demographic data from 418 plant species in the wild, from annual herbs to supercentennial trees, to examine how growth form, habitat, and phylogenetic relationships structure plant life histories and to develop a framework to predict population performance. We show that 55\% of the variation in plant life-history strategies is adequately characterized using two independent axes: the fast-slow continuum, including fast-growing, short-lived plant species at one end and slow-growing, long-lived species at the other, and a reproductive strategy axis, with highly reproductive, iteroparous species at one extreme and poorly reproductive, semelparous plants with frequent shrinkage at the other. Our findings remain consistent across major habitats and are minimally affected by plant growth form and phylogenetic ancestry, suggesting that the relative independence of the fast-slow and reproduction strategy axes is general in the plant kingdom. Our findings have similarities with how life-history strategies are structured in mammals, birds, and reptiles. The position of plant species populations in the 2D space produced by both axes predicts their rate of recovery from disturbances and population growth rate. This life-history framework may complement trait-based frameworks on leaf and wood economics; together these frameworks may allow prediction of responses of plants to anthropogenic disturbances and changing environments.}, 
-doi = {10.1073/pnas.1506215112}, 
-location = {}, 
-keywords = {}}
-
-
 @Article{Stott2016,
 author = {Stott, I. }, 
 title = {{Perturbation analysis of transient population dynamics using matrix projection models}}, 
 journal = {Methods Ecol Evol}, 
 volume = {7}, 
-issue = {6}, 
 pages = {666-678}, 
 year = {2016}, 
 abstract = {}, 
-doi = {10.1111/2041-210X.12543}, 
 location = {}, 
 keywords = {}}
 
@@ -182,11 +150,9 @@ author = {Caughley, G. },
 title = {{Parameters for seasonally breeding populations}}, 
 journal = {Ecology}, 
 volume = {48}, 
-issue = {5}, 
 pages = {834-839}, 
 year = {1967}, 
 abstract = {}, 
-doi = {10.2307/1933741}, 
 location = {}, 
 keywords = {}}
 
@@ -209,11 +175,9 @@ author = {Lefkovitch, L. P. },
 title = {{The study of population growth in organisms grouped by stages}}, 
 journal = {Biometrics}, 
 volume = {21}, 
-issue = {1}, 
 pages = {1-18}, 
 year = {1965}, 
 abstract = {}, 
-doi = {10.2307/2528348}, 
 location = {}, 
 keywords = {}}
 
@@ -223,11 +187,9 @@ author = {Leslie, P. H. },
 title = {{On the use of matrices in certain population mathematics}}, 
 journal = {Biometrika}, 
 volume = {33}, 
-issue = {3}, 
 pages = {183-212}, 
 year = {1945}, 
 abstract = {}, 
-doi = {10.2307/2332297}, 
 location = {}, 
 keywords = {}}
 
@@ -250,11 +212,9 @@ author = {Caswell, H. },
 title = {{Second derivatives of population growth rate: Calculation and applications}}, 
 journal = {Ecology}, 
 volume = {77}, 
-issue = {3}, 
 pages = {870-879}, 
 year = {1996}, 
 abstract = {}, 
-doi = {10.2307/2265507}, 
 location = {}, 
 keywords = {}}
 
@@ -264,12 +224,35 @@ author = {McCarthy, D. and Townley, S. and Hodgson, D. },
 title = {{On second order sensitivity for stage-based population projection matrix models}}, 
 journal = {Theoretical Population Biology}, 
 volume = {74}, 
-issue = {1}, 
 pages = {68-73}, 
 year = {2008}, 
 abstract = {}, 
-doi = {10.1016/j.tpb.2008.04.008}, 
 location = {}, 
 keywords = {}}
 
+
+@Article{Bienvenu2015,
+author = {Bienvenu, F. and Legendre, S. }, 
+title = {{A new approach to the generation time in matrix population models}}, 
+journal = {Am Nat}, 
+volume = {185}, 
+pages = {834-843}, 
+year = {2015}, 
+abstract = {The generation time is commonly defined as the mean age of mothers at birth. In matrix population models, a general formula is available to compute this quantity. However, it is complex and hard to interpret. Here, we present a new approach where the generation time is envisioned as a return time in an appropriate Markov chain. This yields surprisingly simple results, such as the fact that the generation time is the inverse of the sum of the elasticities of the growth rate to changes in the fertilities. This result sheds new light on the interpretation of elasticities (which as we show correspond to the frequency of events in the ancestral lineage of the population), and we use it to generalize a result known as Lebreton’s formula. Finally, we also show that the generation time can be seen as a random variable, and we give a general expression for its distribution.}, 
+location = {Unité Mixte de Recherche 8197, Institut de Biologie de l’École Normale Supérieure (Centre National de la Recherche Scientifique, École Normale Supérieure), 46 Rue d’Ulm, 75230 Paris Cedex 05, France.}, 
+keywords = {}}
+
+
+@Book{Caswell2001,
+author = {Caswell, H. }, 
+title = {Matrix population models: Construction, analysis, and interpretation}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+edition = {2nd}, 
+publisher = {Sinauer Associates}, 
+address = {Sunderland, MA}, 
+year = {2001}, 
+abstract = {}, 
+keywords = {}}
 
